--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.4",
         "axios": "^0.21",
         "laravel-echo": "^1.10.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "pusher-js": "^7.0.3"
+        "postcss": "^8.2.4",
+        "pusher-js": "^7.0.3",
+        "tailwindcss": "^2.0.2"
     }
 }
